# pierrot-le-fou-engine

./: .gitignore  CMakeLists.txt  README.md  compile_shader.sh
include/: context.h  custom_type.h  engine.h  error.h  file.h  global_variable.h  graphique_pipeline.h  main_type.h  shader.h
src/: context.c  engine.c  file.c  glfw_error.c  global_variable.c  graphique_pipeline.c  main.c  main_type.c  shader.c  vertex.c  vulkan_error.c  window.c
test-shader/: test.vert
